Box van update w variants

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -187,20 +187,22 @@ STR_NAME_MAIL_HANI1		:HANI 1 Luggage Van
 STR_NAME_MAIL_KONI_8890	:KONI 8890 Luggage Van
 STR_NAME_MAIL_HONI_8900	:HONI 8900 Luggage Van
 
+# todo make consistent
 STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
 STR_NAME_MAIL_OYU_10	:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
 STR_NAME_MAIL_SUYU42    :SUYU 42 Mail Van
+STR_NAME_MAIL_SUYU_44   :SUYU 44 Mail Van
+STR_NAME_MAIL_SUNI_41   :SUNI 41 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
 STR_NAME_MAIL_44		:MANI 44 Express Van
 STR_NAME_MAIL_MANI_34	:MANI 34 Armoured Van
 STR_NAME_MAIL_30		:MANI 30 Armoured Van
-STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
 
-#################
-#CONCAT SUBSTRINGS#
-#standard, no space, operators
-#################
+# ################
+# CONCAT SUBSTRINGS#
+# standard, no space, operators
+# ################
 
 STR_CONCAT_2	: {STRING} {STRING}
 STR_CONCAT_3	: {STRING} {STRING} {STRING}
@@ -239,14 +241,6 @@ STR_REFIT_MAIL_MAYU33		:{SILVER}MAYU 33{BLACK}
 STR_REFIT_MAIL_MANI31		:{SILVER}MANI 31{BLACK}
 STR_REFIT_MAIL_SUHANE31	    :{SILVER}SUHANE 31{BLACK}
 
-
-
-STR_REFIT_SUNI_40		:{SILVER}SUNI 40{BLACK} Luggage Van
-STR_REFIT_SUYU_44		:{SILVER}SUYU 44{BLACK} Mail Van
-STR_REFIT_WAKI_8000		:{SILVER}WAKI 8000{BLACK} Express Box Van
-STR_REFIT_SUNI_41		:{SILVER}SUNI 41{BLACK} Mail Van with Conductor's Room
-STR_REFIT_WASAFU_8000	:{SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Silver)
-STR_REFIT_WASAFU_BLUE	:{SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Blue)
 
 # 1870 coaches
 
@@ -383,11 +377,18 @@ STR_NAME_SHIKI_800		:SHIKI 800 Superheavy Carrier
 
 STR_NAME_WA_1			:WA 1 Box Van
 STR_NAME_WAKI_1			:WAKI 1 Express Van
+STR_NAME_WAMUFU_1		:WAMUFU 1 Express Van with Brake Compartment
 STR_NAME_WAKI_1000		:WAKI 1000 Express Van
+STR_NAME_WAMUFU_100		:WAMUFU 100 Express Van with Brake Compartment
 STR_NAME_WAKI_5000		:WAKI 5000 Box Van
-STR_NAME_WAKI_10000		:WAKI 10000 Box Van
+STR_NAME_WAKI_8000		:WAKI 8000 Express Van
+STR_NAME_WASAFU_8000	:WASAFU 8000 Express Van with Brake Compartment
+STR_NAME_WAKI_10000		:WAKI 10000 Express Van
+STR_NAME_WAMU_21000		:WAMU 21000 Box Van
+STR_NAME_WAFU_21000		:WAFU 21000 Box Van with Brake Compartment
 STR_NAME_WAMU_50000		:WAMU 50000 Box Van
 STR_NAME_WAMU_80000		:WAMU 80000 Box Van
+STR_NAME_WAMU_90000		:WAMU 90000 Express Van
 STR_NAME_WAMU_480000	:WAMU 480000 Bulk Wagon
 STR_NAME_KA_1			:KA 1 Livestock Van
 
@@ -526,6 +527,7 @@ STR_REFIT_YEARFORM	: {GREEN}Auto-Formation {BLACK} -  Year-Dependent
 
 STR_SUFFIX_IMPERIAL      :{GOLD}"Imperial Train"{BLACK}
 STR_SUFFIX_EXPRESS       :{GOLD}"Express"{BLACK}
+STR_SUFFIX_PARCELS       :{GOLD}"Express Parcels"{BLACK}
 STR_SUFFIX_YUYU          :{GOLD}"Yuyu Salon Okayama"{BLACK}
 STR_SUFFIX_EUROLINER     :{GOLD}"Euroliner"{BLACK}
 STR_SUFFIX_TOKKYU        :{GOLD}"Tokkyu"{BLACK}
