--- a/lang/english.lng
+++ b/lang/english.lng
@@ -595,8 +595,9 @@ STR_SUFFIX_PANDA         :{BLACK}(Panda){BLACK}
 STR_SUFFIX_MOMOTARO      :{BLACK}(Momotaro){BLACK}
 STR_SUFFIX_KINTARO       :{BLACK}(Kintaro){BLACK}
 STR_SUFFIX_REDTHUNDER    :{BLACK}(Red Thunder){BLACK}
-STR_SUFFIX_BLUETHUNDER    :{BLACK}(Blue Thunder){BLACK}
-STR_SUFFIX_REDBEAR    :{BLACK}(Red Bear){BLACK}
+STR_SUFFIX_BLUETHUNDER   :{BLACK}(Blue Thunder){BLACK}
+STR_SUFFIX_REDBEAR       :{BLACK}(Red Bear){BLACK}
+STR_SUFFIX_INVERTER      :{BLACK}(Inverter Hi-Tech Loco){BLACK}
 STR_SUFFIX_HAMAMATSU     :{BLACK}(Hamamatsu Depot){BLACK}
 STR_SUFFIX_NAEBO         :{BLACK}(Naebo Depot){BLACK}
 STR_SUFFIX_CAMO          :{BLACK}(Camouflage Paint){BLACK}
