cont update final

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -90,7 +90,7 @@ STR_NAME_ED62	:ED62
 STR_NAME_ED63	:ED63 Concept
 
 STR_NAME_EF60   :EF60
-STR_NAME_EF60_0	:EF60 Protoype 
+STR_NAME_EF60_0	:EF60 Prototype 
 STR_NAME_EF60_1	:EF60 Old type
 STR_NAME_EF60_2	:EF60 New type 
 STR_NAME_EF62	:EF62
