--- a/lang/english.lng
+++ b/lang/english.lng
@@ -620,23 +620,23 @@ STR_SUFFIX_SLEEPER	:{BLACK}Night Train
 #################
 #MODULAR COLOUR SUFFIXES#
 #################
-STR_COLOUR_WHITE			:{WHITE}White
-STR_COLOUR_BLACK			:{BLACK}Black
-STR_COLOUR_GOLD 			:{GOLD}Gold
-STR_COLOUR_SILVER			:{SILVER}Silver
-STR_COLOUR_GREY			    :{SILVER}Grey
-STR_COLOUR_LTGREEN			:{DKGREEN}Light Green
-STR_COLOUR_GREEN			:{GREEN}Green
-STR_COLOUR_BROWN			:{BROWN}Brown
-STR_COLOUR_DKRED			:{BROWN}Dark Red
-STR_COLOUR_BLUE				:{BLUE}Blue
-STR_COLOUR_LTBLUE			:{LTBLUE}Light Blue
-STR_COLOUR_RED				:{RED}Red
-STR_COLOUR_ORANGE			:{ORANGE}Orange
-STR_COLOUR_PINK 			:{CREAM}Pink
-STR_COLOUR_CREAM			:{LTBROWN}Cream
-STR_COLOUR_YELLOW			:{YELLOW}Yellow
-STR_COLOUR_PURPLE			:{PURPLE}Purple
+STR_COLOUR_WHITE			:{WHITE}White{BLACK}
+STR_COLOUR_BLACK			:{BLACK}Black{BLACK}
+STR_COLOUR_GOLD 			:{GOLD}Gold{BLACK}
+STR_COLOUR_SILVER			:{SILVER}Silver{BLACK}
+STR_COLOUR_GREY			    :{SILVER}Grey{BLACK}
+STR_COLOUR_LTGREEN			:{DKGREEN}Light Green{BLACK}
+STR_COLOUR_GREEN			:{GREEN}Green{BLACK}
+STR_COLOUR_BROWN			:{BROWN}Brown{BLACK}
+STR_COLOUR_DKRED			:{BROWN}Dark Red{BLACK}
+STR_COLOUR_BLUE				:{BLUE}Blue{BLACK}
+STR_COLOUR_LTBLUE			:{LTBLUE}Light Blue{BLACK}
+STR_COLOUR_RED				:{RED}Red{BLACK}
+STR_COLOUR_ORANGE			:{ORANGE}Orange{BLACK}
+STR_COLOUR_PINK 			:{CREAM}Pink{BLACK}
+STR_COLOUR_CREAM			:{LTBROWN}Cream{BLACK}
+STR_COLOUR_YELLOW			:{YELLOW}Yellow{BLACK}
+STR_COLOUR_PURPLE			:{PURPLE}Purple{BLACK}
 
 
 # ####################
@@ -668,10 +668,41 @@ STR_DESC_POWER_MS20		:{BLACK}Engine Type: {GOLD}Electric Multisystem - {RED} AC 
 STR_DESC_POWER_MS25 	:{BLACK}Engine Type: {GOLD}Electric - {RED} AC (20kV) {WHITE}/ {PURPLE} AC (25kV){}
 
 STR_DESC_NARROWGAUGE	:{BLACK}Gauge:{GOLD} Narrow {SILVER}(1,067mm){}
-STR_DESC_STDGAUGE	    :{BLACK}Gauge:{GOLD} Standard (1,435mm){}
+STR_DESC_STDGAUGE	    :{BLACK}Gauge:{GOLD} Standard {SILVER}(1,435mm){}
 
-STR_DESC_WHEELS_1B1     :{BLACK}Wheel Arrangement:{GOLD} 1-B-1 / 2-4-2{}
-STR_DESC_WHEELS_1C      :{BLACK}Wheel Arrangement:{GOLD} 1-C / 2-6-0{}
+STR_DESC_WHEELS_B        :{BLACK}Wheel Arrangement:{GOLD} B / 0-4-0{}
+STR_DESC_WHEELS_B1       :{BLACK}Wheel Arrangement:{GOLD} 1-C / 2-6-0{}
+STR_DESC_WHEELS_1B       :{BLACK}Wheel Arrangement:{GOLD} 1-B / 2-4-0{}
+STR_DESC_WHEELS_1B1      :{BLACK}Wheel Arrangement:{GOLD} 1-B-1 / 2-4-2{}
+STR_DESC_WHEELS_2B       :{BLACK}Wheel Arrangement:{GOLD} 2-B / 4-4-0{}
+STR_DESC_WHEELS_2B1      :{BLACK}Wheel Arrangement:{GOLD} 2-B / 4-4-2{}
+STR_DESC_WHEELS_C        :{BLACK}Wheel Arrangement:{GOLD} C / 0-6-0{}
+STR_DESC_WHEELS_C1       :{BLACK}Wheel Arrangement:{GOLD} C-1 / 0-6-2{}
+STR_DESC_WHEELS_C2       :{BLACK}Wheel Arrangement:{GOLD} C-2 / 0-6-4{}
+STR_DESC_WHEELS_1C       :{BLACK}Wheel Arrangement:{GOLD} 1-C / 2-6-0{}
+STR_DESC_WHEELS_1C1      :{BLACK}Wheel Arrangement:{GOLD} 1-C-1 / 2-6-2{}
+STR_DESC_WHEELS_1C2      :{BLACK}Wheel Arrangement:{GOLD} 1-C-2 / 2-6-4{}
+STR_DESC_WHEELS_2C       :{BLACK}Wheel Arrangement:{GOLD} 2-C / 4-6-0{}
+STR_DESC_WHEELS_2C1      :{BLACK}Wheel Arrangement:{GOLD} 2-C-1 / 4-6-2{}
+STR_DESC_WHEELS_2C2      :{BLACK}Wheel Arrangement:{GOLD} 2-C-2 / 4-6-4{}
+STR_DESC_WHEELS_1D       :{BLACK}Wheel Arrangement:{GOLD} 1-D / 2-8-0{}
+STR_DESC_WHEELS_1D1      :{BLACK}Wheel Arrangement:{GOLD} 1-D-1 / 2-8-2{}
+STR_DESC_WHEELS_1D2      :{BLACK}Wheel Arrangement:{GOLD} 1-D-2 / 2-8-4{}
+
+STR_DESC_WHEELS_E        :{BLACK}Wheel Arrangement:{GOLD} 1-C / 2-6-0{}
+STR_DESC_WHEELS_1E2      :{BLACK}Wheel Arrangement:{GOLD} 1-C / 2-6-0{}
+
+STR_DESC_WHEELS_1BB1      :{BLACK}Wheel Arrangement:{GOLD} 1-B-B-1{}
+STR_DESC_WHEELS_BB        :{BLACK}Wheel Arrangement:{GOLD} B-B{}
+STR_DESC_WHEELS_BBB       :{BLACK}Wheel Arrangement:{GOLD} B-B-B{}
+STR_DESC_WHEELS_CB        :{BLACK}Wheel Arrangement:{GOLD} C-B{}
+STR_DESC_WHEELS_CC        :{BLACK}Wheel Arrangement:{GOLD} C-C{}
+STR_DESC_WHEELS_1CC1      :{BLACK}Wheel Arrangement:{GOLD} 1-C-C-1{}
+STR_DESC_WHEELS_2CC1      :{BLACK}Wheel Arrangement:{GOLD} 2-C-C-1{}
+STR_DESC_WHEELS_2CC2      :{BLACK}Wheel Arrangement:{GOLD} 2-C-C-2{}
+STR_DESC_WHEELS_B1B       :{BLACK}Wheel Arrangement:{GOLD} B-1-B{}
+STR_DESC_WHEELS_B2B       :{BLACK}Wheel Arrangement:{GOLD} B-2-B{}
+STR_DESC_WHEELS_BBBB      :{BLACK}Wheel Arrangement:{GOLD} B-B+B-B{}
 
 STR_DESC_USAGE_GP		:{BLACK}Usage: {SILVER}General Purpose{}
 STR_DESC_USAGE_LF		:{BLACK}Usage: {SILVER}Light Freight{}
