--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -5,26 +5,26 @@ lang: 7F
 STR_GRF_NAME :JP+ 기관차 & 객차 v0.12.4
 STR_GRF_DESCRIPTION :{RED}주의!{SILVER} 이 NewGRF는 JapanSet3: Trains와 함께 추가되어야 합니다.{}{}{WHITE}JP{RED}+{WHITE}기관차 & 객차{BLACK}: {WHITE}JP{RED}+{BLACK} 시리즈 중 하나로, 일본국유철도, JR, 다양한 민간 사철의 기관차, 객차, 화차를 중점에 두고 있습니다. 다양한 새로운 차량와 도색이 포함되어 있습니다. {}{}{TINYFONT}Drawn by {SILVER}Emperor Jake, Voyager One, Davo H., wicket-303, SaYa, Azusa, Erato, andythenorth and the JapanSet Team{}{BLACK}Coded by {SILVER}Emperor Jake{}{BLACK}{COPYRIGHT} 2023 GPLv2+.
 
-STR_PARAM_NAME_BASECOSTMODBUY	:Purchase costs
-STR_PARAM_DESC_BASECOSTMODBUY	:Adjust vehicle purchase costs, to match Japan Set
+STR_PARAM_NAME_BASECOSTMODBUY	:구매 비용
+STR_PARAM_DESC_BASECOSTMODBUY	:Japan Set에 맞게 구매 비용을 조절합니다.
 
-STR_PARAM_NAME_BASECOSTMODRUN	:Running costs
-STR_PARAM_DESC_BASECOSTMODRUN	:Adjust vehicle running costs, to match Japan Set
+STR_PARAM_NAME_BASECOSTMODRUN	:유지 비용
+STR_PARAM_DESC_BASECOSTMODRUN	:Japan Set에 맞게 차량 유지 비용을 조절합니다.
 
-STR_PARAM_NAME_PURCHASELOGO     :Purchase Menu Logos
-STR_PARAM_DESC_PURCHASELOGO     :Enable or disable the railway company logos in the vehicle purchase menu
+STR_PARAM_NAME_PURCHASELOGO     :구매 메뉴 로고
+STR_PARAM_DESC_PURCHASELOGO     :차량 구매 메뉴에서 철도 회사 로고를 활성화 또는 비활성화 합니다.
 
-STR_PARAM_VLOW		:Very Low
-STR_PARAM_LOW		:Low
-STR_PARAM_NORMAL	:Normal
-STR_PARAM_HIGH		:High
-STR_PARAM_VHIGH		:Very High
+STR_PARAM_VLOW		:매우 낮음
+STR_PARAM_LOW		:낮음
+STR_PARAM_NORMAL	:보통
+STR_PARAM_HIGH		:높음
+STR_PARAM_VHIGH		:매우 높음
 
-STR_ERROR_JAPANSETTRAINS_LOADORDER	:Must be loaded after JapanSet 3 Trains!
-STR_ERROR_JAPANSETTRAINS_REQUIRES	:JP+ Engines requires JapanSet 3 Trains to work!
+STR_ERROR_JAPANSETTRAINS_LOADORDER	:JapanSet 3 Train과 함께 추가되어야 합니다!
+STR_ERROR_JAPANSETTRAINS_REQUIRES	:JP+ 기관차가 작동하려면 JapanSet 3 Trains이 필요합니다!
 STR_ERROR_JAPANSETTRAINS	:JapanSet 3 Trains
 
-STR_ERROR_JPPLUSSET			:Must be loaded after JP+ Set!
+STR_ERROR_JPPLUSSET			:JP+ Set과 함께 추가되어야 합니다!
 
 
 STR_NAME_7100	    :7100
@@ -41,8 +41,8 @@ STR_NAME_DD51       :DD51
 STR_NAME_DF200      :DF200
 STR_NAME_DF200_1     :DF200-0
 STR_NAME_DF200_2     :DF200-100 / -200
-STR_NAME_DF200_P     :DF200-901 Prototype
-STR_NAME_DF200_7     :DF200-7000 {GOLD}"Seven Stars in Kyushu"{BLACK}
+STR_NAME_DF200_P     :DF200-901 시제기
+STR_NAME_DF200_7     :DF200-7000 {GOLD}"나나츠보시 in 큐슈"{BLACK}
 STR_NAME_HD300      :HD300
 
 STR_NAME_AB10	:AB10 
@@ -57,11 +57,11 @@ STR_NAME_ED54	:ED54
 STR_NAME_ED55	:ED55
 
 STR_NAME_EF10	:EF10 
-STR_NAME_EF10_1	:EF10 Old type 
-STR_NAME_EF10_2	:EF10 New type 
+STR_NAME_EF10_1	:EF10 구형
+STR_NAME_EF10_2	:EF10 신형
 STR_NAME_EF13	:EF13
-STR_NAME_EF13_1	:EF13 Old type 
-STR_NAME_EF13_2	:EF13 New type 
+STR_NAME_EF13_1	:EF13 구형
+STR_NAME_EF13_2	:EF13 신형
 STR_NAME_EF15	:EF15 
 STR_NAME_EF16	:EF16 
 STR_NAME_EF18	:EF18 
@@ -71,30 +71,30 @@ STR_NAME_EF53	:EF53
 STR_NAME_EF55	:EF55 
 STR_NAME_EF56	:EF56 
 STR_NAME_EF57	:EF57 
-STR_NAME_EF57_2	:EF57 Prototype 
+STR_NAME_EF57_2	:EF57 시제기
 STR_NAME_EF58	:EF58 
-STR_NAME_EF58_1 :EF58 New type
-STR_NAME_EF58_2	:EF58 Old type
+STR_NAME_EF58_1 :EF58 신형
+STR_NAME_EF58_2	:EF58 구형
 
 STR_NAME_EF59	:EF59 
-STR_NAME_EF59_1	:EF59-1 Banker 
-STR_NAME_EF59_2	:EF59-20 Banker 
+STR_NAME_EF59_1	:EF59-1 뱅커
+STR_NAME_EF59_2	:EF59-20 뱅커
 
 STR_NAME_EH10	:EH10 
-STR_NAME_EH10_2	:EH10 Prototype 
+STR_NAME_EH10_2	:EH10 시제기
 STR_NAME_EH50	:EH50 
 
 STR_NAME_ED60	:ED60 
 STR_NAME_ED61	:ED61 
 STR_NAME_ED62	:ED62 
-STR_NAME_ED63	:ED63 Concept
+STR_NAME_ED63	:ED63 컨셉
 
 STR_NAME_EF60   :EF60
-STR_NAME_EF60_0	:EF60 Prototype 
-STR_NAME_EF60_1	:EF60 Old type
-STR_NAME_EF60_2	:EF60 New type 
+STR_NAME_EF60_0	:EF60 시제기
+STR_NAME_EF60_1	:EF60 구형
+STR_NAME_EF60_2	:EF60 신형
 STR_NAME_EF62	:EF62
-STR_NAME_EF62_0	:EF62 Prototype
+STR_NAME_EF62_0	:EF62 시제기
 STR_NAME_EF63	:EF63 
 STR_NAME_EF64	:EF64
 STR_NAME_EF64_1	:EF64-0 
@@ -108,15 +108,15 @@ STR_NAME_EF65_3	:EF65-1000
 STR_NAME_EF66	:EF66
 STR_NAME_EF66_1	:EF66-0 
 STR_NAME_EF66_2	:EF66-100 
-STR_NAME_EF66_3	:EF66-2000 Concept
+STR_NAME_EF66_3	:EF66-2000 컨셉
 
 STR_NAME_EF67	:EF67
-STR_NAME_EF67_1	:EF67-0 Banker 
-STR_NAME_EF67_2	:EF67-100 Banker 
+STR_NAME_EF67_1	:EF67-0 뱅커
+STR_NAME_EF67_2	:EF67-100 뱅커
 
 STR_NAME_ED46   :ED46
 STR_NAME_EF30	:EF30 
-STR_NAME_EF30_1	:EF30 Prototype
+STR_NAME_EF30_1	:EF30 시제기
 STR_NAME_EF80	:EF80 
 STR_NAME_EF81	:EF81 
 STR_NAME_EF81_0	:EF81-0
@@ -134,16 +134,16 @@ STR_NAME_ED76_1	:ED76-500
 STR_NAME_ED76_2	:ED76-550
 STR_NAME_ED79	:ED79 
 STR_NAME_EF70	:EF70 
-STR_NAME_EF70_1	:EF70 Old type
-STR_NAME_EF70_2	:EF70 New type
+STR_NAME_EF70_1	:EF70 신형
+STR_NAME_EF70_2	:EF70 구형
 STR_NAME_EF71	:EF71
 
 STR_NAME_EF200	    :EF200 
-STR_NAME_EF200_P    :EF200 Prototype
+STR_NAME_EF200_P    :EF200 시제기
 STR_NAME_EF210	    :EF210
 STR_NAME_EF210_0	:EF210-0 
 STR_NAME_EF210_1	:EF210-100 
-STR_NAME_EF210_2	:EF210-300 Banker 
+STR_NAME_EF210_2	:EF210-300 뱅커
 STR_NAME_EH200  	:EH200
 
 STR_NAME_ED500	    :ED500 
@@ -153,35 +153,35 @@ STR_NAME_EF510_0	:EF510-0
 STR_NAME_EF510_5	:EF510-500
 STR_NAME_EF510_3	:EF510-300
 STR_NAME_EH500  	:EH500 
-STR_NAME_EH500_P	:EH500 Prototype
-STR_NAME_EH500_1	:EH500 Old type
-STR_NAME_EH500_2	:EH500 New type
+STR_NAME_EH500_P	:EH500 시제기
+STR_NAME_EH500_1	:EH500 구형
+STR_NAME_EH500_2	:EH500 신형
 STR_NAME_EH800	    :EH800 
-STR_NAME_M250	    :M250 Cargo EMU 
+STR_NAME_M250	    :M250계
 
-STR_NAME_DEKI_400	:DeKi 400 
+STR_NAME_DEKI_400	:데키 400 
 STR_NAME_EL120		:EL120 
 STR_NAME_E851	    :E851 
 STR_NAME_E31	    :E31 
 STR_NAME_E51	    :E51 
 
-STR_NAME_PAX_HA4995		:HA 4995 Passenger Coach
-STR_NAME_PAX_FUKOHA7945	:FUKOHA 7945 Passenger Coach
-STR_NAME_PAX_HOHA6810	:HOHA 6810 Passenger Coach
-STR_NAME_PAX_OHA31		:OHA 31 Passenger Coach
-STR_NAME_PAX_SUHA32		:SUHA 32 Passenger Coach
-STR_NAME_PAX_OHA35		:OHA 35 Passenger Coach
-STR_NAME_PAX_SUHA43		:SUHA 43 Passenger Coach
-STR_NAME_PAX_SUHA44		:SUHA 43 {GOLD}"Tokaidō"{BLACK}
-STR_NAME_SLEEPER_10		:10 Series Passenger Coach
-STR_NAME_PASSENGER_12	:12 Series Passenger Coach
-STR_NAME_PASSENGER_24	:24 Series Sleeper Coach
-STR_NAME_PASSENGER_50	:50 Series Passenger Coach
-STR_NAME_PAX_50_5000	:50-5000 Series {GOLD}"Rapid Kaikyō"{BLACK}
+STR_NAME_PAX_HA4995		:하 4995 객차
+STR_NAME_PAX_FUKOHA7945	:후코하 7945 객차
+STR_NAME_PAX_HOHA6810	:호하 6810 객차
+STR_NAME_PAX_OHA31		:오하 31 객차
+STR_NAME_PAX_SUHA32		:수하 32 객차
+STR_NAME_PAX_OHA35		:오하 35 객차
+STR_NAME_PAX_SUHA43		:수하 43 객차
+STR_NAME_PAX_SUHA44		:수하 43 {GOLD}"도카이도"{BLACK}
+STR_NAME_SLEEPER_10		:10계 객차
+STR_NAME_PASSENGER_12	:12계 객차
+STR_NAME_PASSENGER_24	:24계 침대차
+STR_NAME_PASSENGER_50	:50계 객차
+STR_NAME_PAX_50_5000	:50-5000계 {GOLD}"카이쿄 급행"{BLACK}
 
-STR_NAME_PAX_26			:E26 Series {GOLD}"Cassiopeia"{BLACK}
-STR_NAME_PAX_77			:77 Series {GOLD}"Seven Stars in Kyushu"{BLACK}
-STR_NAME_JOYFUL_12		:12 Series {GOLD}"Joyful Train"{BLACK}
+STR_NAME_PAX_26			:E26계 {GOLD}"카시오페이아"{BLACK}
+STR_NAME_PAX_77			:77계 {GOLD}"나나츠보시 in 큐슈"{BLACK}
+STR_NAME_JOYFUL_12		:12계 {GOLD}"조이풀 트레인"{BLACK}
 
 STR_NAME_MAIL_HANI1		:HANI 1 Luggage Van
 STR_NAME_MAIL_KONI_8890	:KONI 8890 Luggage Van
