--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -171,8 +171,8 @@ STR_NAME_PAX_HOHA6810	:호하 6810 객차
 STR_NAME_PAX_OHA31		:오하 31 객차
 STR_NAME_PAX_SUHA32		:수하 32 객차
 STR_NAME_PAX_OHA35		:오하 35 객차
-STR_NAME_PAX_SUHA43		:수하 43 객차
-STR_NAME_PAX_SUHA44		:수하 43 {GOLD}"도카이도"{BLACK}
+STR_NAME_PAX_SUHA43		:스하 43 객차
+STR_NAME_PAX_SUHA44		:스하 43 {GOLD}"도카이도"{BLACK}
 STR_NAME_SLEEPER_10		:10계 객차
 STR_NAME_PASSENGER_12	:12계 객차
 STR_NAME_PASSENGER_24	:24계 침대차
@@ -183,21 +183,21 @@ STR_NAME_PAX_26			:E26계 {GOLD}"카시오페이아"{BLACK}
 STR_NAME_PAX_77			:77계 {GOLD}"나나츠보시 in 큐슈"{BLACK}
 STR_NAME_JOYFUL_12		:12계 {GOLD}"조이풀 트레인"{BLACK}
 
-STR_NAME_MAIL_HANI1		:HANI 1 Luggage Van
-STR_NAME_MAIL_KONI_8890	:KONI 8890 Luggage Van
-STR_NAME_MAIL_HONI_8900	:HONI 8900 Luggage Van
+STR_NAME_MAIL_HANI1		:하니 1 수하물차
+STR_NAME_MAIL_KONI_8890	:코니 8890 수하물차
+STR_NAME_MAIL_HONI_8900	:호니 8900 수하물차
 
 # todo make consistent
-STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
-STR_NAME_MAIL_OYU_10	:OYU 10 Mail Van
-STR_NAME_MAIL_15		:SUYU 15 Mail Van
-STR_NAME_MAIL_SUYU42    :SUYU 42 Mail Van
-STR_NAME_MAIL_SUYU_44   :SUYU 44 Mail Van
-STR_NAME_MAIL_SUNI_41   :SUNI 41 Mail Van
-STR_NAME_MAIL_50		:MANI 50 Express Van
-STR_NAME_MAIL_44		:MANI 44 Express Van
-STR_NAME_MAIL_MANI_34	:MANI 34 Armoured Van
-STR_NAME_MAIL_30		:MANI 30 Armoured Van
+STR_NAME_MAIL_MANI_31	:마유 33 우편차
+STR_NAME_MAIL_OYU_10	:오유 10 우편차
+STR_NAME_MAIL_15		:소유 15 우편차
+STR_NAME_MAIL_SUYU42    :스유 42 우편차
+STR_NAME_MAIL_SUYU_44   :스유 44 우편차
+STR_NAME_MAIL_SUNI_41   :스니 41 우편차
+STR_NAME_MAIL_50		:마니 50 급행우편차
+STR_NAME_MAIL_44		:마니 44 급행우편차
+STR_NAME_MAIL_MANI_34	:마니 34 장갑차
+STR_NAME_MAIL_30		:마니 30 장갑차
 
 # ################
 # CONCAT SUBSTRINGS#
@@ -212,12 +212,12 @@ STR_CONCAT_3S	:{STRING}{STRING}{STRING}
 STR_CONCAT_4S	:{STRING}{STRING}{STRING}{STRING}
 STR_CONCAT_5S	:{STRING}{STRING}{STRING}{STRING}{STRING}
 
-STR_CONCAT_1C	:{BLACK}Operators: {STRING}{}
-STR_CONCAT_2C	:{BLACK}Operators: {STRING} / {STRING}{}
-STR_CONCAT_3C	:{BLACK}Operators: {STRING} / {STRING} / {STRING}{}
-STR_CONCAT_4C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING}{}
-STR_CONCAT_5C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
-STR_CONCAT_6C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_1C	:{BLACK}운용사: {STRING}{}
+STR_CONCAT_2C	:{BLACK}운용사: {STRING} / {STRING}{}
+STR_CONCAT_3C	:{BLACK}운용사: {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_4C	:{BLACK}운용사: {STRING} / {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_5C	:{BLACK}운용사: {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_6C	:{BLACK}운용사: {STRING} / {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
 
 STR_CONCAT_1F	:{BLACK} - {STRING}
 STR_CONCAT_2F	:{BLACK} - {STRING}{BLACK} / {STRING}
@@ -230,103 +230,103 @@ STR_CONCAT_4F	:{BLACK} - {STRING}{BLACK} / {STRING}{BLACK} / {STRING}{BLACK} / {
 
 # Mail/express vans
 
-STR_REFIT_MAIL_MANI34	    :{SILVER}MANI 34{BLACK}
-STR_REFIT_MAIL_MANI35       :{SILVER}MANI 35{BLACK}
-STR_REFIT_MAIL_MANI36       :{SILVER}MANI 36{BLACK}
-STR_REFIT_MAIL_SUYU42       :{SILVER}SUYU 42{BLACK}
-STR_REFIT_MAIL_SUYU43       :{SILVER}SUYU 43{BLACK}
+STR_REFIT_MAIL_MANI34	    :{SILVER}마니 34{BLACK}
+STR_REFIT_MAIL_MANI35       :{SILVER}마니 35{BLACK}
+STR_REFIT_MAIL_MANI36       :{SILVER}마니 36{BLACK}
+STR_REFIT_MAIL_SUYU42       :{SILVER}스유 42{BLACK}
+STR_REFIT_MAIL_SUYU43       :{SILVER}스유 43{BLACK}
 
 
-STR_REFIT_MAIL_MAYU33		:{SILVER}MAYU 33{BLACK}
-STR_REFIT_MAIL_MANI31		:{SILVER}MANI 31{BLACK}
-STR_REFIT_MAIL_SUHANE31	    :{SILVER}SUHANE 31{BLACK}
+STR_REFIT_MAIL_MAYU33		:{SILVER}마유 33{BLACK}
+STR_REFIT_MAIL_MANI31		:{SILVER}마니 31{BLACK}
+STR_REFIT_MAIL_SUHANE31	    :{SILVER}스하네 31{BLACK}
 
 
 # 1870 coaches
 
-STR_REFIT_PAX_HA4995		:{SILVER}HA 4995{BLACK}
-STR_REFIT_PAX_HABU3			:{SILVER}HABU 3{BLACK}
-STR_REFIT_PAX_RO481			:{SILVER}RO 481{BLACK}
-STR_REFIT_MAIL_HANI1		:{SILVER}HANI 1{BLACK}
+STR_REFIT_PAX_HA4995		:{SILVER}하 4995{BLACK}
+STR_REFIT_PAX_HABU3			:{SILVER}하부 3{BLACK}
+STR_REFIT_PAX_RO481			:{SILVER}로 481{BLACK}
+STR_REFIT_MAIL_HANI1		:{SILVER}하니 1{BLACK}
 
 # 1880 coaches
 
-STR_REFIT_PAX_FKI5670			:{SILVER}FUKOI 5670{BLACK}
-STR_REFIT_PAX_FKH7925			:{SILVER}FUKOHA 7925{BLACK}
-STR_REFIT_PAX_FKR5675			:{SILVER}FUKORO 5675{BLACK}
-STR_REFIT_PAX_FKH7945			:{SILVER}FUKOHA 7945{BLACK}
-STR_REFIT_PAXMAIL_FKHY8050		:{SILVER}FUKOHAYU 8050{BLACK}
-STR_REFIT_MAIL_KN8890		    :{SILVER}KONI 8890{BLACK}
+STR_REFIT_PAX_FKI5670			:{SILVER}후코이 5670{BLACK}
+STR_REFIT_PAX_FKH7925			:{SILVER}후코하 7925{BLACK}
+STR_REFIT_PAX_FKR5675			:{SILVER}후코로 5675{BLACK}
+STR_REFIT_PAX_FKH7945			:{SILVER}후코하 7945{BLACK}
+STR_REFIT_PAXMAIL_FKHY8050		:{SILVER}후코하유 8050{BLACK}
+STR_REFIT_MAIL_KN8890		    :{SILVER}코니 8890{BLACK}
 
 # 1910 coaches
 
-STR_REFIT_PAX_HOHA6810			:{SILVER}HOHA 6810{BLACK}
-STR_REFIT_PAX_HOHAFU7570		:{SILVER}HOHAFU 7570{BLACK}
-STR_REFIT_PAX_HORO5535			:{SILVER}HORO 5535{BLACK}
-STR_REFIT_PAX_HOROFU5615		:{SILVER}HOROFU 5615{BLACK}
-STR_REFIT_PAX_HOYA5100			:{SILVER}HOYA 5100{BLACK}
-STR_REFIT_PAX_INERO5135			:{SILVER}INERO 5135{BLACK}
-STR_REFIT_PAX_INAI5035			:{SILVER}INAI 5035{BLACK}
-STR_REFIT_PAX_HOSHI5065			:{SILVER}HOSHI 5065{BLACK}
-STR_REFIT_PAXMAIL_NAHANI8430	:{SILVER}NAHANO 8430{BLACK}
-STR_REFIT_MAIL_HONI8900			:{SILVER}HONI 8900{BLACK}
-STR_REFIT_MAIL_HOYUNI8725		:{SILVER}HOYUNI 8725{BLACK}
+STR_REFIT_PAX_HOHA6810			:{SILVER}호하 6810{BLACK}
+STR_REFIT_PAX_HOHAFU7570		:{SILVER}호하후 7570{BLACK}
+STR_REFIT_PAX_HORO5535			:{SILVER}호로 5535{BLACK}
+STR_REFIT_PAX_HOROFU5615		:{SILVER}호로후 5615{BLACK}
+STR_REFIT_PAX_HOYA5100			:{SILVER}호야 5100{BLACK}
+STR_REFIT_PAX_INERO5135			:{SILVER}이네로 5135{BLACK}
+STR_REFIT_PAX_INAI5035			:{SILVER}이나이 5035{BLACK}
+STR_REFIT_PAX_HOSHI5065			:{SILVER}호시 5065{BLACK}
+STR_REFIT_PAXMAIL_NAHANI8430	:{SILVER}나하노 8430{BLACK}
+STR_REFIT_MAIL_HONI8900			:{SILVER}호니 8900{BLACK}
+STR_REFIT_MAIL_HOYUNI8725		:{SILVER}호유니 8725{BLACK}
 
 #########
 #SUHA 32#
 #########
-STR_REFIT_PAX_SUHA32		:{SILVER}SUHA 32{BLACK}
-STR_REFIT_PAX_MARONE37		:{SILVER}MARONE 37{BLACK}
-STR_REFIT_PAX_SURO30		:{SILVER}SURO 30{BLACK}
-STR_REFIT_PAX_MAINE37		:{SILVER}MAINE 37{BLACK}
-STR_REFIT_PAX_SUSHI37		:{SILVER}SUSHI 37{BLACK}
-STR_REFIT_PAX_MAISHI37		:{SILVER}MAISHI 37{BLACK}
-STR_REFIT_PAX_SUHANE31		:{SILVER}SUHANE 31{BLACK}
-STR_REFIT_PAX_MAINEFU37		:{SILVER}MAINEFU 37{BLACK}
-STR_REFIT_PAX_MAIRONEFU37	:{SILVER}MAIRONEFU 37{BLACK}
-STR_REFIT_PAX_SITE37		:{SILVER}SITE 37{BLACK}
+STR_REFIT_PAX_SUHA32		:{SILVER}스하 32{BLACK}
+STR_REFIT_PAX_MARONE37		:{SILVER}마로네 37{BLACK}
+STR_REFIT_PAX_SURO30		:{SILVER}스로 30{BLACK}
+STR_REFIT_PAX_MAINE37		:{SILVER}마이네 37{BLACK}
+STR_REFIT_PAX_SUSHI37		:{SILVER}스시 37{BLACK}
+STR_REFIT_PAX_MAISHI37		:{SILVER}마시 37{BLACK}
+STR_REFIT_PAX_SUHANE31		:{SILVER}스하네 31{BLACK}
+STR_REFIT_PAX_MAINEFU37		:{SILVER}마이네후 37{BLACK}
+STR_REFIT_PAX_MAIRONEFU37	:{SILVER}마이로네후 37{BLACK}
+STR_REFIT_PAX_SITE37		:{SILVER}시테 37{BLACK}
 
 #########
 #SUHA 43#
 #########
-STR_REFIT_PAX_SUHA43		:{SILVER}SUHA 43{BLACK}
-STR_REFIT_PAX_SUHAFU43		:{SILVER}SUHAFU 43{BLACK}
-STR_REFIT_PAX_SUHA44		:{SILVER}SUHA 44 {BLACK}
-STR_REFIT_PAX_SUHAFU44		:{SILVER}SUHAFU 44{BLACK}
-STR_REFIT_PAX_SURO51		:{SILVER}SURO 51{BLACK}
-STR_REFIT_PAX_SURO54		:{SILVER}SURO 54{BLACK}
-STR_REFIT_PAX_MASHI35		:{SILVER}MASHI 35{BLACK}
-STR_REFIT_PAX_MAINE40		:{SILVER}MAINE 40{BLACK}
-STR_REFIT_PAX_MARONE40		:{SILVER}MARONE 40{BLACK}
-STR_REFIT_PAX_MARONE41		:{SILVER}MARONE 41{BLACK}
-STR_REFIT_PAX_SUHANI35		:{SILVER}SUHANI 35{BLACK}
-STR_REFIT_PAX_SUYA42		:{SILVER}SUYA 42{BLACK}
+STR_REFIT_PAX_SUHA43		:{SILVER}스하 43{BLACK}
+STR_REFIT_PAX_SUHAFU43		:{SILVER}스하후 43{BLACK}
+STR_REFIT_PAX_SUHA44		:{SILVER}스하 44 {BLACK}
+STR_REFIT_PAX_SUHAFU44		:{SILVER}스하후 44{BLACK}
+STR_REFIT_PAX_SURO51		:{SILVER}스로 51{BLACK}
+STR_REFIT_PAX_SURO54		:{SILVER}스로 54{BLACK}
+STR_REFIT_PAX_MASHI35		:{SILVER}마시 35{BLACK}
+STR_REFIT_PAX_MAINE40		:{SILVER}마네 40{BLACK}
+STR_REFIT_PAX_MARONE40		:{SILVER}마로네 40{BLACK}
+STR_REFIT_PAX_MARONE41		:{SILVER}마로네 41{BLACK}
+STR_REFIT_PAX_SUHANI35		:{SILVER}스하니 35{BLACK}
+STR_REFIT_PAX_SUYA42		:{SILVER}스야 42{BLACK}
 
 
 ###########
 #10 SERIES#
 ###########
-STR_REFIT_PAX_NR10		:{SILVER}NARO 10{BLACK}
-STR_REFIT_PAX_ORN10		:{SILVER}ORONE 10{BLACK}
-STR_REFIT_PAX_OHN17		:{SILVER}OHANE 17{BLACK}
-STR_REFIT_PAX_NRHN10	:{SILVER}NAROHANE 10{BLACK}
-STR_REFIT_PAX_NH10		:{SILVER}NAHA 10{BLACK}
-STR_REFIT_PAX_NHF10		:{SILVER}NAHAFU 10{BLACK}
-STR_REFIT_PAX_NHN10		:{SILVER}NAHANE 10{BLACK}
-STR_REFIT_PAX_OS17		:{SILVER}OSHI 17{BLACK}
+STR_REFIT_PAX_NR10		:{SILVER}나로 10{BLACK}
+STR_REFIT_PAX_ORN10		:{SILVER}오로네 10{BLACK}
+STR_REFIT_PAX_OHN17		:{SILVER}오하네 17{BLACK}
+STR_REFIT_PAX_NRHN10	:{SILVER}나로하네 10{BLACK}
+STR_REFIT_PAX_NH10		:{SILVER}나하 10{BLACK}
+STR_REFIT_PAX_NHF10		:{SILVER}나하후 10{BLACK}
+STR_REFIT_PAX_NHN10		:{SILVER}나하네 10{BLACK}
+STR_REFIT_PAX_OS17		:{SILVER}오시 17{BLACK}
 
 
 ###########
 #24 SERIES#
 ###########
-STR_REFIT_PAX_OHNF25	:{SILVER}OHANEFU 25{BLACK}
-STR_REFIT_PAX_OHNF24	:{SILVER}OHANEFU 24{BLACK}
-STR_REFIT_PAX_OHN25		:{SILVER}OHANE 25{BLACK}
-STR_REFIT_PAX_OHN24		:{SILVER}OHANE 24{BLACK}
-STR_REFIT_PAX_ORN25		:{SILVER}ORONE 25{BLACK}
-STR_REFIT_PAX_ORN24		:{SILVER}ORONE 24{BLACK}
-STR_REFIT_PAX_OS24		:{SILVER}OSHI 24{BLACK}
-STR_REFIT_PAX_KN24		:{SILVER}KANI 24{BLACK}
+STR_REFIT_PAX_OHNF25	:{SILVER}오하네후 25{BLACK}
+STR_REFIT_PAX_OHNF24	:{SILVER}오하네후 24{BLACK}
+STR_REFIT_PAX_OHN25		:{SILVER}오하네 25{BLACK}
+STR_REFIT_PAX_OHN24		:{SILVER}오하네 24{BLACK}
+STR_REFIT_PAX_ORN25		:{SILVER}오로네 25{BLACK}
+STR_REFIT_PAX_ORN24		:{SILVER}오로네 24{BLACK}
+STR_REFIT_PAX_OS24		:{SILVER}오시 24{BLACK}
+STR_REFIT_PAX_KN24		:{SILVER}코니 24{BLACK}
 
 ################
 #CLASS SUFFIXES#
