--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -364,28 +364,28 @@ STR_SUFFIX_LUGGAGE              : 수하물차
 #FREIGHT WAGONS#
 ################
 
-STR_NAME_CAR_CARRIER	:미래 운송업자
-STR_NAME_SUPPLY_CARRIER	:오래된 차량 평판
-STR_NAME_BOXCAR			:미래 유개차
-STR_NAME_COVERED_HOPPER	:미래 호퍼차
-STR_NAME_OPEN_HOPPER	:미래 호퍼차
+STR_NAME_CAR_CARRIER	:자동차 화차
+STR_NAME_SUPPLY_CARRIER	:유개화차
+STR_NAME_BOXCAR			:박스차
+STR_NAME_COVERED_HOPPER	:유개호퍼차
+STR_NAME_OPEN_HOPPER	:무개호퍼차
 
-STR_NAME_COIL_CARRIER	:코일차
+STR_NAME_COIL_CARRIER	:철판코일차
 STR_NAME_SLAG_LADLE		:슬래그 조차
 STR_NAME_TORPEDO		:토페도차
 STR_NAME_SHIKI_800		:시키 800 중장비차
 
 STR_NAME_WA_1			:와 1 박스차
 STR_NAME_WAKI_1			:와키 1 특급화차
-STR_NAME_WAMUFU_1		:와무후 1 브레이크가 있는 특급화차
+STR_NAME_WAMUFU_1		:와무후 1 특급차장화차
 STR_NAME_WAKI_1000		:와키 1000 특급화차
-STR_NAME_WAMUFU_100		:와무후 100 브레이크가 있는 특급화차
+STR_NAME_WAMUFU_100		:와무후 100 특급차장화차
 STR_NAME_WAKI_5000		:와키 5000 박스차
 STR_NAME_WAKI_8000		:와키 8000 특급화차
-STR_NAME_WASAFU_8000	:와사후 8000 브레이크가 있는 특급화차
+STR_NAME_WASAFU_8000	:와사후 8000 특급차장화차
 STR_NAME_WAKI_10000		:와키 10000 특급화차
 STR_NAME_WAMU_21000		:와무 21000 박스차
-STR_NAME_WAFU_21000		:와후 21000 브레이크가 있는 박스차
+STR_NAME_WAFU_21000		:와후 21000 박스차장차
 STR_NAME_WAMU_50000		:와무 50000 박스차
 STR_NAME_WAMU_80000		:와무 80000 박스차
 STR_NAME_WAMU_480000	:와무 480000 무개화차
@@ -399,72 +399,72 @@ STR_NAME_RE_2500		:레 2500 냉장화차
 STR_NAME_REKI_1 		:레키 1 / 레사 900 냉장화차
 STR_NAME_REMU_5000		:레무 5000 냉장화차
 STR_NAME_RESA_10000		:레사 10000 냉장화차
-STR_NAME_REMUFU_10000	:레무후 10000 브레이크가 있는 냉장화차
+STR_NAME_REMUFU_10000	:레무후 10000 냉장차장화차
 
 
 
-STR_NAME_KU_5000		:쿠 5000 자동차 수송차
-STR_NAME_KOKI_71		:코키 71 자동차 수송차
-STR_NAME_KOKI_5500		:코키 5500 컨테이너차
-STR_NAME_KOKI_10000		:코키 10000 컨테이너차
-STR_NAME_KOKIFU_10000	:코키후 10000 Container Carrier with Brake Compartment
-STR_NAME_KOKI_50000		:코키 50000 Container Carrier
-STR_NAME_KOKIFU_50000   :KOKIFU 50000 Container Carrier with Brake Compartment
-STR_NAME_KOKI_250000	:KOKI 250000 Container Carrier
-STR_NAME_KOKI_100		:KOKI 100 / 101 Container Carrier
-STR_NAME_KOKI_107		:KOKI 107 Container Carrier
-STR_NAME_M250_TRAILER   :T260 Cargo EMU Trailer
-STR_NAME_ROADRAILER		:WA 100 Dual Mode Transport
+STR_NAME_KU_5000		:쿠 5000 자동차 화차
+STR_NAME_KOKI_71		:코키 71 자동차 화차
+STR_NAME_KOKI_5500		:코키 5500 컨테이너 화차
+STR_NAME_KOKI_10000		:코키 10000 컨테이너 화차
+STR_NAME_KOKIFU_10000	:코키후 10000 컨테이너 차장 화차
+STR_NAME_KOKI_50000		:코키 50000 컨테이너 화차
+STR_NAME_KOKIFU_50000   :코키후 50000 컨테이너 차장 화차
+STR_NAME_KOKI_250000	:코키 250000 컨테이너 화차
+STR_NAME_KOKI_100		:코키 100 / 101 컨테이너 화차
+STR_NAME_KOKI_107		:코키 107 컨테이너 화차
+STR_NAME_M250_TRAILER   :T260 화물 트레일러 동차
+STR_NAME_ROADRAILER		:와 100 듀얼 모드 화차
 
-STR_NAME_TO_1			:TO 1 Open Wagon
-STR_NAME_TOMU_1			:TOMU 1 Open Wagon
-STR_NAME_TORA_5000		:TORA 5000 Open Wagon
-STR_NAME_TORA_90000		:TORA 90000 Bulk Wagon
-STR_NAME_TOKI_900		:TOKI 900 Open Wagon
-STR_NAME_TOKI_15000		:TOKI 15000 Open Wagon
-STR_NAME_TOKI_25000		:TOKI 25000 Open Wagon
+STR_NAME_TO_1			:토 1 무개화차
+STR_NAME_TOMU_1			:토무 1 무개화차
+STR_NAME_TORA_5000		:토라 5000 무개화차
+STR_NAME_TORA_90000		:토라 90000 벌크 무개화차
+STR_NAME_TOKI_900		:토키 900 무개화차
+STR_NAME_TOKI_15000		:토키 15000 무개화차
+STR_NAME_TOKI_25000		:토키 25000 무개화차
 
-STR_NAME_SE_1			:SE 1 Hopper
-STR_NAME_SEKI_1			:SEKI 1 / Otese 9500 Hopper
-STR_NAME_SEKI_1000		:SEKI 1000 Covered Hopper
-STR_NAME_SEKI_3000		:SEKI 3000 / 6000 Hopper
-STR_NAME_HOKI_650		:HOKI 650 Covered Hopper
-STR_NAME_HOKI_800		:HOKI 800 Hopper
-STR_NAME_HOKI_1000		:HOKI 1000 Covered Hopper
-STR_NAME_HOKI_2200		:HOKI 2200 Grain Hopper
-STR_NAME_HOKI_2500		:HOKI 2500 / 9500 Lidded Hopper
-STR_NAME_HOKI_5700		:HOKI 5700 / 7500 Covered Hopper
-STR_NAME_HOKI_8300		:HOKI 8300 / 9300 Covered Hopper
-STR_NAME_HOKI_8500		:HOKI 8500 Hopper
-STR_NAME_HOKI_10000		:HOKI 10000 Hopper
+STR_NAME_SE_1			:세 1 호퍼차
+STR_NAME_SEKI_1			:세 1 / 오테세 9500 호퍼차
+STR_NAME_SEKI_1000		:세키 1000 유개호퍼차
+STR_NAME_SEKI_3000		:세키 3000 / 6000 호퍼차
+STR_NAME_HOKI_650		:호키 650 유개호퍼차
+STR_NAME_HOKI_800		:호키 800 호퍼차
+STR_NAME_HOKI_1000		:호키 1000 유개호퍼차
+STR_NAME_HOKI_2200		:호키 2200 곡물호퍼차
+STR_NAME_HOKI_2500		:호키 2500 / 9500 유개호퍼차
+STR_NAME_HOKI_5700		:호키 5700 / 7500 유개호퍼차
+STR_NAME_HOKI_8300		:호키 8300 / 9300 유개호퍼차
+STR_NAME_HOKI_8500		:호키 8500 호퍼차
+STR_NAME_HOKI_10000		:호키 10000 호퍼차
 
-STR_NAME_TA_1			:TA 1 Tanker
-STR_NAME_TASA_500		:TASA 500 / Fua 27000 Tanker
-STR_NAME_TAMU_500		:TAMU 500 Tanker
-STR_NAME_TAKI_100		:TAKI 100 Oil Tanker
-STR_NAME_TAKI_3000		:TAKI 3000 Tanker
-STR_NAME_TASA_5700		:TASA 5700 Gas Tanker
-STR_NAME_TAKI_25000		:TAKI 25000 Gas Tanker
-STR_NAME_TAKI_5450		:TAKI 5450 Chemical Tanker
-STR_NAME_TAKI_9900		:TAKI 9900 Fuel Tanker
-STR_NAME_TAKI_50000		:TAKI 50000 Oil Tanker
-STR_NAME_TAKI_64000		:TAKI 64000	Oil Tanker
-STR_NAME_TAKI_35000		:TAKI 35000 Tanker
-STR_NAME_TAKI_43000		:TAKI 43000 Tanker
-STR_NAME_TAKI_1000		:TAKI 1000 Tanker
+STR_NAME_TA_1			:타 1 조차
+STR_NAME_TASA_500		:타사 500 / 후아 27000 조차
+STR_NAME_TAMU_500		:타무 500 조차
+STR_NAME_TAKI_100		:타키 100 유조화차
+STR_NAME_TAKI_3000		:타키 3000 조차
+STR_NAME_TASA_5700		:타사 5700 가스조차
+STR_NAME_TAKI_25000		:타키 25000 가스조차
+STR_NAME_TAKI_5450		:타키 5450 화학조차
+STR_NAME_TAKI_9900		:타키 9900 연료조차
+STR_NAME_TAKI_50000		:타키 50000 유조화차
+STR_NAME_TAKI_64000		:타키 64000	유조화차
+STR_NAME_TAKI_35000		:타키 35000 조차
+STR_NAME_TAKI_43000		:타키 43000 조차
+STR_NAME_TAKI_1000		:타키 1000 조차
 
-STR_NAME_CHISA_1		:CHISA 1 Flat Wagon
-STR_NAME_CHISA_1600		:CHISA 1600 Flat Wagon
-STR_NAME_CHI_1000		:CHI 1000 Flat Wagon
-STR_NAME_CHIKI_1500		:CHIKI 1500 Flat Wagon
-STR_NAME_CHIKI_7000		:CHIKI 7000 Flat Wagon
+STR_NAME_CHISA_1		:치사 1 평판화차
+STR_NAME_CHISA_1600		:치사 1600 평판화차
+STR_NAME_CHI_1000		:치 1000 평판화차
+STR_NAME_CHIKI_1500		:치키 1500 평판화차
+STR_NAME_CHIKI_7000		:치키 7000 평판화차
 
-STR_NAME_YO_1			:YO 1 Brake Van
-STR_NAME_YO_1500		:YO 1500 Brake Van
-STR_NAME_YO_5000		:YO 5000 Brake Van
-STR_NAME_YO_8000		:YO 8000 Brake Van
-STR_NAME_YO_38000		:YO 38000 Brake Van
-STR_NAME_YO_9000		:YO 9000 Brake Van
+STR_NAME_YO_1			:요 1 차장차
+STR_NAME_YO_1500		:요 1500 차장차
+STR_NAME_YO_5000		:요 5000 차장차
+STR_NAME_YO_8000		:요 8000 차장차
+STR_NAME_YO_38000		:요 38000 차장차
+STR_NAME_YO_9000		:요 9000 차장차
 
 ##################
 #COMPANY SUFFIXES#
