--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -470,68 +470,68 @@ STR_NAME_YO_9000		:요 9000 차장차
 #COMPANY SUFFIXES#
 ##################
 
-STR_SUFFIX_JGR			:{WHITE}JGR
-STR_SUFFIX_JNR			:{WHITE}JNR
-STR_SUFFIX_JRF			:{WHITE}JR Freight
-STR_SUFFIX_JRE			:{WHITE}JR East
-STR_SUFFIX_JRC			:{WHITE}JR Central
-STR_SUFFIX_JRW			:{WHITE}JR West
-STR_SUFFIX_JRS			:{WHITE}JR Shikoku
-STR_SUFFIX_JRK			:{WHITE}JR Kyushu
-STR_SUFFIX_JRH			:{WHITE}JR Hokkaido
-STR_SUFFIX_JR			:{WHITE}JR Group
+STR_SUFFIX_JGR			:{WHITE}JGR 일본 철도성
+STR_SUFFIX_JNR			:{WHITE}JNR 일본국유철도
+STR_SUFFIX_JRF			:{WHITE}JR 화물
+STR_SUFFIX_JRE			:{WHITE}JR 동일본
+STR_SUFFIX_JRC			:{WHITE}JR 도카이
+STR_SUFFIX_JRW			:{WHITE}JR 서일본
+STR_SUFFIX_JRS			:{WHITE}JR 시코쿠
+STR_SUFFIX_JRK			:{WHITE}JR 큐슈
+STR_SUFFIX_JRH			:{WHITE}JR 홋카이도
+STR_SUFFIX_JR			:{WHITE}JR 그룹
 
-STR_SUFFIX_AICHI		:{WHITE}Aichi Railway
-STR_SUFFIX_MEITETSU		:{WHITE}Meitetsu
-STR_SUFFIX_HCC			:{WHITE}Hokkaido Coal Company
-STR_SUFFIX_OIGAWA		:{WHITE}Ōigawa Railway
-STR_SUFFIX_SEIBU		:{WHITE}Seibu Railway
-STR_SUFFIX_SAKHALIN		:{WHITE}Sakhalin Railway
-STR_SUFFIX_SAGANO		:{WHITE}Sagano Scenic Railway
-STR_SUFFIX_WATARASE 	:{WHITE}Watarase Keikoku
-STR_SUFFIX_KANSAI		:{WHITE}Kansai Freight Railway
-STR_SUFFIX_ASAHIKAWA		:{WHITE}Asahikawa Express Railway
-STR_SUFFIX_AKITA_RINKAI	    :{WHITE}Akita Rinkai Railway
-STR_SUFFIX_TOMAKOMAI		:{WHITE}Tomakomai Port Development Line
-STR_SUFFIX_NAGOYA_RINKAI	:{WHITE}Nagoya Rinkai Railway
-STR_SUFFIX_KOSAKA		    :{WHITE}Kosaka Railway
-STR_SUFFIX_KAMIOKA		    :{WHITE}Kamioka Railway
-STR_SUFFIX_KASHIMA		    :{WHITE}Kashima Railway
+STR_SUFFIX_AICHI		:{WHITE}아이치 철도
+STR_SUFFIX_MEITETSU		:{WHITE}메이테츠
+STR_SUFFIX_HCC			:{WHITE}홋카이도 석탄 회사
+STR_SUFFIX_OIGAWA		:{WHITE}오이가와 철도
+STR_SUFFIX_SEIBU		:{WHITE}세이부 철도
+STR_SUFFIX_SAKHALIN		:{WHITE}사할린 철도
+STR_SUFFIX_SAGANO		:{WHITE}사가노 풍경 철도
+STR_SUFFIX_WATARASE 	:{WHITE}와타라세 케이코쿠
+STR_SUFFIX_KANSAI		:{WHITE}간사이 화물 철도
+STR_SUFFIX_ASAHIKAWA		:{WHITE}아사히카와 급행 철도
+STR_SUFFIX_AKITA_RINKAI	    :{WHITE}아키타 린카이 철도
+STR_SUFFIX_TOMAKOMAI		:{WHITE}도마코마이항 발전철도
+STR_SUFFIX_NAGOYA_RINKAI	:{WHITE}나고야 린카이 철도
+STR_SUFFIX_KOSAKA		    :{WHITE}코사카 철도
+STR_SUFFIX_KAMIOKA		    :{WHITE}가미오카 철도
+STR_SUFFIX_KASHIMA		    :{WHITE}가시마 철도
 
-STR_SUFFIX_PRIVATE		:{WHITE}Various Private Operators
+STR_SUFFIX_PRIVATE		:{WHITE}다양한 사유철도 운영사
 
-STR_SUFFIX_NIPPON       :{WHITE}Nippon Express
-STR_SUFFIX_TOSHIBA      :{WHITE}Toshiba Logistics
-STR_SUFFIX_YAWATA       :{WHITE}Yawata Works / Nippon Steel
+STR_SUFFIX_NIPPON       :{WHITE}니폰 익스프레스
+STR_SUFFIX_TOSHIBA      :{WHITE}도시바 물류
+STR_SUFFIX_YAWATA       :{WHITE}야와타 제철소 / 일본제철
 
-STR_SUFFIX_GNR          :{WHITE}Great Northern Railway
-STR_SUFFIX_NYC          :{WHITE}New York Central
-STR_SUFFIX_MILW          :{WHITE}Milwaukee Road
-STR_SUFFIX_PRR          :{WHITE}Pennsylvania Railroad
-STR_SUFFIX_MPL          :{WHITE}Missouri Pacific
-STR_SUFFIX_AMTRAK       :{WHITE}Amtrak
+STR_SUFFIX_GNR          :{WHITE}그레이트 노던 철도
+STR_SUFFIX_NYC          :{WHITE}뉴욕 센트럴
+STR_SUFFIX_MILW          :{WHITE}밀워키 로드
+STR_SUFFIX_PRR          :{WHITE}펜실베이니아 철도
+STR_SUFFIX_MPL          :{WHITE}미주리 퍼시픽
+STR_SUFFIX_AMTRAK       :{WHITE}암트랙
 
 
 #####################
 #NEW MODULAR STRINGS#
 #####################
 
-STR_SUFFIX_YEARDEP	:{GREEN}Year-Dependent{BLACK}
-STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
-STR_SUFFIX_CC		:{GREEN}Company Colour{BLACK}
-STR_SUFFIX_AUTOFORM	:{GREEN}Auto-Formation{BLACK}
+STR_SUFFIX_YEARDEP	:{GREEN}연도 기반{BLACK}
+STR_SUFFIX_RANDOM	:{GREEN}무작위{BLACK}
+STR_SUFFIX_CC		:{GREEN}회사 색상{BLACK}
+STR_SUFFIX_AUTOFORM	:{GREEN}자동 조성{BLACK}
 
-STR_REFIT_YEARDEP	:{BLACK} - {GREEN}Year-Dependent{BLACK}
-STR_REFIT_CC		:{BLACK} - {GREEN}Company Colour{BLACK}
-STR_REFIT_RANDOM	:{BLACK} - {GREEN}Random{BLACK}
-STR_REFIT_AUTOFORM	:{BLACK} - {GREEN}Auto-Formation{BLACK}
-
-
-STR_REFIT_AUTOYEAR	: {GREEN}Random {BLACK} -  Auto-Update
-STR_REFIT_RANDYEAR	: {GREEN}Random {BLACK} -  Year-Dependent
+STR_REFIT_YEARDEP	:{BLACK} - {GREEN}연도 기반{BLACK}
+STR_REFIT_CC		:{BLACK} - {GREEN}회사 색상{BLACK}
+STR_REFIT_RANDOM	:{BLACK} - {GREEN}무작위{BLACK}
+STR_REFIT_AUTOFORM	:{BLACK} - {GREEN}자동 조성{BLACK}
 
 
-STR_REFIT_YEARFORM	: {GREEN}Auto-Formation {BLACK} -  Year-Dependent
+STR_REFIT_AUTOYEAR	: {GREEN}무작위 {BLACK} -  자동 업데이트
+STR_REFIT_RANDYEAR	: {GREEN}무작위 {BLACK} -  연도 기반
+
+
+STR_REFIT_YEARFORM	: {GREEN}자동 조성 {BLACK} -  연도기반
 
 
 # Named Trains
