--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -536,65 +536,65 @@ STR_REFIT_YEARFORM	: {GREEN}자동 조성 {BLACK} -  연도기반
 
 # Named Trains
 
-STR_SUFFIX_IMPERIAL      :{GOLD}"Imperial Train"{BLACK}
-STR_SUFFIX_EXPRESS       :{GOLD}"Express"{BLACK}
-STR_SUFFIX_PARCELS       :{GOLD}"Express Parcels"{BLACK}
-STR_SUFFIX_YUYU          :{GOLD}"Yuyu Salon Okayama"{BLACK}
-STR_SUFFIX_EUROLINER     :{GOLD}"Euroliner"{BLACK}
-STR_SUFFIX_TOKKYU        :{GOLD}"Tokkyu"{BLACK}
-STR_SUFFIX_TOKAIDO       :{GOLD}"Tokaido"{BLACK}
-STR_SUFFIX_RAINBOW       :{GOLD}"Super Express Rainbow"{BLACK}
-STR_SUFFIX_TWILIGHT      :{GOLD}"Twilight Express"{BLACK}
-STR_SUFFIX_HOKUTOSEI     :{GOLD}"Hokutosei"{BLACK}
-STR_SUFFIX_CASSIOPEIA    :{GOLD}"Cassiopeia"{BLACK}
-STR_SUFFIX_AKEBONO       :{GOLD}"Akebono Orient Saloon"{BLACK}
-STR_SUFFIX_SOUTHERNCROSS :{GOLD}"Southern Cross"{BLACK}
-STR_SUFFIX_AMERICANTRAIN :{GOLD}"American Train"{BLACK}
-STR_SUFFIX_YASURAGI      :{GOLD}"Yasuragi"{BLACK}
-STR_SUFFIX_7STARS        :{GOLD}"Seven Stars in Kyushu"{BLACK}
-STR_SUFFIX_SALONEXP      :{GOLD}"Salon Express Tokyo"{BLACK}
+STR_SUFFIX_IMPERIAL      :{GOLD}"황실 열차"{BLACK}
+STR_SUFFIX_EXPRESS       :{GOLD}"특급"{BLACK}
+STR_SUFFIX_PARCELS       :{GOLD}"특급소포"{BLACK}
+STR_SUFFIX_YUYU          :{GOLD}"유유 살롱 오카야마"{BLACK}
+STR_SUFFIX_EUROLINER     :{GOLD}"유로라이너"{BLACK}
+STR_SUFFIX_TOKKYU        :{GOLD}"도큐"{BLACK}
+STR_SUFFIX_TOKAIDO       :{GOLD}"도카이도"{BLACK}
+STR_SUFFIX_RAINBOW       :{GOLD}"슈퍼 익스프레스 레인보우"{BLACK}
+STR_SUFFIX_TWILIGHT      :{GOLD}"트와일라이트 익스프레스"{BLACK}
+STR_SUFFIX_HOKUTOSEI     :{GOLD}"호쿠토세이"{BLACK}
+STR_SUFFIX_CASSIOPEIA    :{GOLD}"카시오페이아"{BLACK}
+STR_SUFFIX_AKEBONO       :{GOLD}"아케보노 오리엔트 살롱"{BLACK}
+STR_SUFFIX_SOUTHERNCROSS :{GOLD}"사우전드 크로스"{BLACK}
+STR_SUFFIX_AMERICANTRAIN :{GOLD}"아메리칸 트레인"{BLACK}
+STR_SUFFIX_YASURAGI      :{GOLD}"야스라기"{BLACK}
+STR_SUFFIX_7STARS        :{GOLD}"나나츠보시 in 큐슈"{BLACK}
+STR_SUFFIX_SALONEXP      :{GOLD}"살롱 익스프레스 도쿄"{BLACK}
 
-STR_SUFFIX_NOROKKO            :{GOLD}"Norokko"{BLACK}
-STR_SUFFIX_ISLANDEXPRESS      :{GOLD}"Island Express"{BLACK}
-STR_SUFFIX_NOSTALGICVIEW      :{GOLD}"Nostalgic View"{BLACK}
-STR_SUFFIX_OKUIZUMO           :{GOLD}"Okuizumo Orochi"{BLACK}
-STR_SUFFIX_KINOKUNI           :{GOLD}"Kinokuni Seaside"{BLACK}
+STR_SUFFIX_NOROKKO            :{GOLD}"노로코"{BLACK}
+STR_SUFFIX_ISLANDEXPRESS      :{GOLD}"아일랜드 익스프레스"{BLACK}
+STR_SUFFIX_NOSTALGICVIEW      :{GOLD}"노스텔직 뷰"{BLACK}
+STR_SUFFIX_OKUIZUMO           :{GOLD}"오쿠이조모 오로치"{BLACK}
+STR_SUFFIX_KINOKUNI           :{GOLD}"키노쿠니 시사이드"{BLACK}
 
-STR_SUFFIX_TSUBAME           :{GOLD}"Tsubame"{BLACK}
-STR_SUFFIX_HATO              :{GOLD}"Hato"{BLACK}
-STR_SUFFIX_GINGA             :{GOLD}"Ginga"{BLACK}
+STR_SUFFIX_TSUBAME           :{GOLD}"츠바메"{BLACK}
+STR_SUFFIX_HATO              :{GOLD}"하토"{BLACK}
+STR_SUFFIX_GINGA             :{GOLD}"긴가"{BLACK}
 
 # Misc Suffixes
 
-STR_SUFFIX_AIRCON	     :{BLACK}(Air Conditioned)
-STR_SUFFIX_CLERESTORY    :{BLACK}(Clerestory)
-STR_SUFFIX_FLATROOF      :{BLACK}(Flat Roof)
-STR_SUFFIX_ORIGINAL	:{BLACK}(Original)
-STR_SUFFIX_PROTO	:{BLACK}(Prototype)
-STR_SUFFIX_PANTOS	:{BLACK}(New Pantographs)
-STR_SUFFIX_LIGHTS	:{BLACK}(New Headlights)
-STR_SUFFIX_UPGRADE	:{BLACK}(Upgraded)
-STR_SUFFIX_OLDSHAPE	:{BLACK}(Old Shape)
-STR_SUFFIX_NEWSHAPE	:{BLACK}(New Shape)
-STR_SUFFIX_REFURB	:{BLACK}(Refurbished)
-STR_SUFFIX_FLIPPED  :{BLACK}(Flipped)
-STR_SUFFIX_NOLOGO   :{BLACK}(No Logo)
-STR_SUFFIX_LOGO          :{BLACK}(Logo)
-STR_SUFFIX_LARGELOGO    :{BLACK}(Large Logo)
-STR_SUFFIX_REDLOGO      :{BLACK}(Red Logo)
-STR_SUFFIX_WHITELOGO    :{BLACK}(White Logo)
-STR_SUFFIX_STRIPE       :{BLACK}(Stripe)
-STR_SUFFIX_WHISKERS     :{BLACK}(Whiskers)
-STR_SUFFIX_2TONE        :{BLACK}(Two-Tone)
-STR_SUFFIX_SEMIFIC      :{BLACK}(Semi-Fictional)
-STR_SUFFIX_FICTION      :{BLACK}(Fictional)
-STR_SUFFIX_PROPOSAL     :{BLACK}(Proposed - Never Built)
-STR_SUFFIX_CONCEPT      :{BLACK}(Concept - Never Built)
-STR_SUFFIX_EXPERIMENT   :{BLACK}(Experimental)
-STR_SUFFIX_BANKER       :{BLACK}(Banker Conversion)
-STR_SUFFIX_2WINDOW       :{BLACK}(Two Windows)
-STR_SUFFIX_3WINDOW       :{BLACK}(Three Windows)
-STR_SUFFIX_5WINDOW       :{BLACK}(Five Windows)
+STR_SUFFIX_AIRCON	     :{BLACK}(에어컨)
+STR_SUFFIX_CLERESTORY    :{BLACK}(통풍)
+STR_SUFFIX_FLATROOF      :{BLACK}(평평한 지붕)
+STR_SUFFIX_ORIGINAL	:{BLACK}(기본)
+STR_SUFFIX_PROTO	:{BLACK}(시제기)
+STR_SUFFIX_PANTOS	:{BLACK}(새로운 집전기)
+STR_SUFFIX_LIGHTS	:{BLACK}(새로운 전조등)
+STR_SUFFIX_UPGRADE	:{BLACK}(업그레이드)
+STR_SUFFIX_OLDSHAPE	:{BLACK}(오래된 모양)
+STR_SUFFIX_NEWSHAPE	:{BLACK}(새로운 모양)
+STR_SUFFIX_REFURB	:{BLACK}(개조)
+STR_SUFFIX_FLIPPED  :{BLACK}(뒤집힌)
+STR_SUFFIX_NOLOGO   :{BLACK}(로고 없음)
+STR_SUFFIX_LOGO          :{BLACK}(로고)
+STR_SUFFIX_LARGELOGO    :{BLACK}(큰 로고)
+STR_SUFFIX_REDLOGO      :{BLACK}(빨간 로고)
+STR_SUFFIX_WHITELOGO    :{BLACK}(하얀 로고)
+STR_SUFFIX_STRIPE       :{BLACK}(띠)
+STR_SUFFIX_WHISKERS     :{BLACK}(위스커)
+STR_SUFFIX_2TONE        :{BLACK}(투 톤)
+STR_SUFFIX_SEMIFIC      :{BLACK}(준 가상)
+STR_SUFFIX_FICTION      :{BLACK}(가상)
+STR_SUFFIX_PROPOSAL     :{BLACK}(제안 - 구현되지 않음)
+STR_SUFFIX_CONCEPT      :{BLACK}(컨셉 - 구현되지 않음)
+STR_SUFFIX_EXPERIMENT   :{BLACK}(실험)
+STR_SUFFIX_BANKER       :{BLACK}(뱅커 전환)
+STR_SUFFIX_2WINDOW       :{BLACK}(두개의 창문)
+STR_SUFFIX_3WINDOW       :{BLACK}(세개의 창문)
+STR_SUFFIX_5WINDOW       :{BLACK}(다섯개의 창문)
 
 
 STR_SUFFIX_JNR_RETRO     :{BLACK}(JNR Retro){BLACK}
